--- a/infra/src/package.json
+++ b/infra/src/package.json
@@ -5,8 +5,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.3.0",
-		"@aws-sdk/node-http-handler": "^^3.3.0",
-		"@aws-sdk/types": "^^3.3.0",
+		"@aws-sdk/node-http-handler": "^3.3.0",
+		"@aws-sdk/types": "^3.3.0",
 		"ts-node": "^9.0.0"
 	},
 	"devDependencies": {
