--- a/infra/src/package.json
+++ b/infra/src/package.json
@@ -7,6 +7,8 @@
 		"@aws-sdk/client-s3": "^3.3.0",
 		"@aws-sdk/node-http-handler": "^3.3.0",
 		"@aws-sdk/types": "^3.3.0",
+		"fs": "0.0.1-security",
+		"path": "^0.12.7",
 		"ts-node": "^9.0.0"
 	},
 	"devDependencies": {
