--- a/infra/src/package.json
+++ b/infra/src/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.3.0",
+		"@aws-sdk/client-rds": "^3.5.0",
 		"@aws-sdk/node-http-handler": "^3.3.0",
 		"@aws-sdk/types": "^3.3.0",
 		"fs": "0.0.1-security",
