--- a/infra/src/package.json
+++ b/infra/src/package.json
@@ -13,6 +13,7 @@
 		"path": "^0.12.7",
 		"unzip": "^0.1.11",
 		"mysql-import": "^5.0.21",
+		"mysql2": "^2.2.5",
 		"ts-node": "^9.0.0"
 	},
 	"devDependencies": {
