--- a/infra/src/package.json
+++ b/infra/src/package.json
@@ -7,11 +7,15 @@
 		"@aws-sdk/client-ec2": "^3.5.0",
 		"@aws-sdk/client-s3": "^3.3.0",
 		"@aws-sdk/client-rds": "^3.5.0",
+		"@aws-sdk/client-lambda": "^3.5.0",
+		"@aws-sdk/client-iam": "^3.5.0",
 		"@aws-sdk/node-http-handler": "^3.3.0",
 		"@aws-sdk/types": "^3.3.0",
 		"fs": "0.0.1-security",
 		"path": "^0.12.7",
 		"unzip": "^0.1.11",
+		"adm-zip": "^0.5.3",
+		"await-exec": "^0.1.2",
 		"ts-node": "^9.0.0"
 	},
 	"devDependencies": {
