--- a/infra/src/package.json
+++ b/infra/src/package.json
@@ -9,6 +9,7 @@
 		"@aws-sdk/client-rds": "^3.5.0",
 		"@aws-sdk/client-lambda": "^3.5.0",
 		"@aws-sdk/client-iam": "^3.5.0",
+		"@aws-sdk/client-api-gateway": "^3.5.0",
 		"@aws-sdk/node-http-handler": "^3.3.0",
 		"@aws-sdk/types": "^3.3.0",
 		"fs": "0.0.1-security",
